# jvot3

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
benches/: .dir-locals.el  is_some_cmavo.rs  syllabify.rs
benches/common/: mod.rs
docs/: jargon.md
src/: data.rs  jvofli.rs  lib.rs  main.rs  phonology.rs  prewords.rs  settings.rs
