[package]
name = "jvot3"
version = "3.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Tools for creating and decomposing Lojban lujvo."
repository = "https://github.com/mi2ebi/jvot3"
keywords = ["lojban", "lujvo", "linguistics", "cli"]
categories = ["text-processing", "parser-implementations", "command-line-utilities"]
# rust-version = "1.95.0"

# [[bin]]
# name = "jvotci"
# path = "src/main.rs"

[dependencies]
fancy-regex = "0.17.0"
indexmap = "2.8.0"
itertools = "0.14.0"
lazy_format = "2.0.3"
regex = "1.11.1"

[dev-dependencies]
const_format = { version = "0.2.36", features = ["assertcp"] }
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "syllabify"
harness = false
[[bench]]
name = "is_some_cmavo"
harness = false
